# labor-law-rag-service

./: .example.env  .gitignore  CLAUDE.md  README.md  config.py  project spec.md  pyproject.toml  requirements.txt
api/: main.py
data/: labour_proclamation.md
db/: schema.sql
eval/: eval_retrieval.py  questions.json
frontend/: index.html
generation/: generator.py  reranker.py
ingest/: chunker.py  embedder.py  ingestor.py
retrieval/: hybrid.py  keyword_search.py  vector_search.py
