[project]
name = "rag-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-generativeai>=0.8.6",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]
